Fixed the sold out sticker and added spacing

--- a/main.css
+++ b/main.css
@@ -1,11 +1,15 @@
 .all {
-  width: 1000px;
+  width: 1500px;
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-evenly;
+  flex-basis: 1000px;
+  position: relative;
 }
 
 .card {
   display: flex;
+  height: 750px;
 }
 
 body {
@@ -21,4 +25,10 @@ h3 {
 
 h2 {
   font: 'Roboto Mono';
+}
+
+.soldout {
+  position: absolute;
+  top: 50px;
+  left: -100px;
 }
